--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=api-elec-pro-assitant
+server.port=8081
+
+
+# Configuration de la base de données
+spring.datasource.url=jdbc:mysql://127.0.0.1:8889/api-elec-pro-assitant
+spring.datasource.username=api-elec-pro-assitant
+spring.datasource.password=rootroot
+
+# Hibernate
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
